--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -24,9 +26,9 @@
       <header class="ms-header">
         <nav class="ms-nav">
           <div class="ms-logo">
-            <a href="index.html" data-type="page-transition">
-              <div class="logo-dark current"><img src="logo-dark.svg" alt="logo image"></div>
-              <div class="logo-light"><img src="logo-light.svg" alt="logo image"></div>
+            <a href="home1.html" data-type="page-transition">
+              <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
+              <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
           </div>
           <button class="hamburger" type="button" data-toggle="navigation">
@@ -39,46 +41,46 @@
             <ul class="ms-navbar">
               <!-- Nav Link -->
               <li class="nav-item">
-                <a href="index.html" data-type="page-transition">
-                  <span class="ms-btn">home</span>
-                  <span class="nav-item__label">Back to home page</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="albums.html" data-type="page-transition">
-                  <span class="ms-btn">albums</span>
-                  <span class="nav-item__label">View all our works</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="gallery.html" data-type="page-transition">
-                  <span class="ms-btn">gallery</span>
-                  <span class="nav-item__label">Interactively disintermediate</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="blog.html" data-type="page-transition">
-                  <span class="ms-btn">blog</span>
-                  <span class="nav-item__label">Discover fascinating stories</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="about.html" data-type="page-transition">
-                  <span class="ms-btn">about</span>
-                  <span class="nav-item__label">Learn more about the author</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="contact.html" data-type="page-transition">
-                  <span class="ms-btn">contact</span>
-                  <span class="nav-item__label">Get in touch and find us</span>
-                </a>
-              </li>
+                  <a href="home1.html" data-type="page-transition">
+                    <span class="ms-btn">home</span>
+                    <span class="nav-item__label">Back to home page</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="albums.html" data-type="page-transition">
+                    <span class="ms-btn">gallery</span>
+                    <span class="nav-item__label">View all our works</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="gallery.html" data-type="page-transition">
+                    <span class="ms-btn">team</span>
+                    <span class="nav-item__label">Our team</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="blog.html" data-type="page-transition">
+                    <span class="ms-btn">events</span>
+                    <span class="nav-item__label">Discover fascinating events</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="about.html" data-type="page-transition">
+                    <span class="ms-btn">about</span>
+                    <span class="nav-item__label">Learn more about the society</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="contact.html" data-type="page-transition">
+                    <span class="ms-btn">contact</span>
+                    <span class="nav-item__label">Get in touch and find us</span>
+                  </a>
+                </li>
             </ul>
           </div>
         </nav>
@@ -151,10 +153,10 @@
         <div class="ms-footer">
           <div class="copyright">Copyright © 2017. Design by MadSparrow</div>
           <ul class="socials">
-            <li><a href="#" class="socicon-facebook"></a></li>
-            <li><a href="#" class="socicon-twitter"></a></li>
-            <li><a href="#" class="socicon-instagram"></a></li>
-            <li><a href="#" class="socicon-youtube"></a></li>
+            <li><a href="#" class="socicon-facebook fa fa-facebook"></a></li>
+            <li><a href="#" class="socicon-twitter fa fa-twitter"></a></li>
+            <li><a href="#" class="socicon-instagram fa fa-instagram"></a></li>
+            <li><a href="#" class="socicon-youtube fa fa-youtube"></a></li>
           </ul>
         </div>
       </footer>
