--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="ms-main-container">
@@ -22,9 +24,9 @@
       <header class="ms-header">
         <nav class="ms-nav">
           <div class="ms-logo">
-            <a href="index.html" data-type="page-transition">
-              <div class="logo-dark current"><img src="logo-dark.svg" alt="logo image"></div>
-              <div class="logo-light"><img src="logo-light.svg" alt="logo image"></div>
+            <a href="home1.html" data-type="page-transition">
+              <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
+              <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
           </div>
           <button class="hamburger" type="button" data-toggle="navigation">
@@ -37,46 +39,46 @@
             <ul class="ms-navbar">
               <!-- Nav Link -->
               <li class="nav-item">
-                <a href="index.html" data-type="page-transition">
-                  <span class="ms-btn">home</span>
-                  <span class="nav-item__label">Back to home page</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="albums.html" data-type="page-transition">
-                  <span class="ms-btn">albums</span>
-                  <span class="nav-item__label">View all our works</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="gallery.html" data-type="page-transition">
-                  <span class="ms-btn">gallery</span>
-                  <span class="nav-item__label">Interactively disintermediate</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="blog.html" data-type="page-transition">
-                  <span class="ms-btn">blog</span>
-                  <span class="nav-item__label">Discover fascinating stories</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="about.html" data-type="page-transition">
-                  <span class="ms-btn">about</span>
-                  <span class="nav-item__label">Learn more about the author</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="contact.html" data-type="page-transition">
-                  <span class="ms-btn">contact</span>
-                  <span class="nav-item__label">Get in touch and find us</span>
-                </a>
-              </li>
+                  <a href="home1.html" data-type="page-transition">
+                    <span class="ms-btn">home</span>
+                    <span class="nav-item__label">Back to home page</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="albums.html" data-type="page-transition">
+                    <span class="ms-btn">gallery</span>
+                    <span class="nav-item__label">View all our works</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="gallery.html" data-type="page-transition">
+                    <span class="ms-btn">team</span>
+                    <span class="nav-item__label">Our team</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="blog.html" data-type="page-transition">
+                    <span class="ms-btn">events</span>
+                    <span class="nav-item__label">Discover fascinating events</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="about.html" data-type="page-transition">
+                    <span class="ms-btn">about</span>
+                    <span class="nav-item__label">Learn more about the society</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="contact.html" data-type="page-transition">
+                    <span class="ms-btn">contact</span>
+                    <span class="nav-item__label">Get in touch and find us</span>
+                  </a>
+                </li>
             </ul>
           </div>
         </nav>
@@ -91,7 +93,7 @@
           </div>
         </div>
         <!-- Page Content -->
-        <div class="ms-section__block">
+        <!-- <div class="ms-section__block">
           <div id="gallery">
             <img alt="image 2"
             src="../../mir-s3-cdn-cf.behance.net/project_modules/1400/bcabe753001729.59248241d5973.jpg"
@@ -125,17 +127,95 @@
         </div>
         <div class="ms-section__block center-block">
           <a href="#" class="ms-button" data-title="load more" data-type="page-transition">load more</a>
-        </div>
+        </div> -->
       </main>
+      <div class="team-container">
+        <div class="head">COORDINATORS</div>
+        <div class="cordi">
+          
+          <div class="cordi-card">
+            <img src="assets/images/profiles/parth.jpeg" alt="parth" width="200px" height="350px">
+            <div class="name-card">PARTH</div>
+          </div>
+          <div class="cordi-card">
+            <img src="assets/images/profiles/kunal.jpeg" alt="kunal" width="200px" height="350px">
+            <div class="name-card">KUNAL KUMAR</div>
+          </div>
+          <div class="cordi-card">
+              <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
+              <div class="name-card">VISHWA JEET</div>
+          </div>
+        </div>
+        <div class="head">MEMBERS</div>
+        <div class="member">
+          
+          <div class="memb-1">  
+            <div class="memb-card">
+                <img src="assets/images/profiles/divyanshi.jpeg" alt="divyanshi" width="200px" height="350px">
+                <div class="name-card1">DIVYANSHI</div>
+            </div>
+            <div class="memb-card">
+                <img src="assets/images/profiles/tarun.jpeg" alt="tarun" width="200px" height="350px">
+                <div class="name-card1">TARUN RAJ</div>
+            </div>
+            <div class="memb-card">
+                <img src="assets/images/profiles/husan.jpeg" alt="husan" width="200px" height="350px">
+                <div class="name-card1">HUSANDEEP</div>
+            </div>
+            <div class="memb-card">
+                <img src="assets/images/profiles/nehal.jpeg" alt="nehal" width="200px" height="350px">
+                <div class="name-card1">NEHAL</div>
+            </div>
+          </div>
+
+          <div class="memb-2">  
+            <div class="memb-card">
+                <img src="assets/images/profiles/jaya.jpeg" alt="jaya" width="200px" height="350px">
+                <div class="name-card1">JAYA MEENA</div>
+            </div>
+            <div class="memb-card">
+                <img src="assets/images/profiles/sunidhi.jpeg" alt="sunidhi" width="200px" height="350px">
+                <div class="name-card1">SUNIDHI KASHYAP</div>
+            </div>
+            <div class="memb-card">
+                <img src="assets/images/profiles/aastha.jpeg" alt="aastha" width="200px" height="350px">
+                <div class="name-card1">AASTHA</div>
+            </div>
+            <div class="memb-card">
+                <img src="assets/images/profiles/roshni.jpeg" alt="roshni" width="200px" height="350px">
+                <div class="name-card1">ROSHNI PRAJAPATI</div>
+            </div>
+          </div>
+          <div class="memb-3">  
+              <div class="memb-card">
+                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
+                  <div class="name-card1">VISHWA JEET</div>
+              </div>
+              <div class="memb-card">
+                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
+                  <div class="name-card1">VISHWA JEET</div>
+              </div>
+              <div class="memb-card">
+                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
+                  <div class="name-card1">VISHWA JEET</div>
+              </div>
+              <div class="memb-card">
+                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
+                  <div class="name-card1">VISHWA JEET</div>
+              </div>
+            </div>
+        </div>
+      </div>
+
       <!-- Footer -->
       <footer>
         <div class="ms-footer">
           <div class="copyright">Copyright © 2017. Design by MadSparrow</div>
           <ul class="socials">
-            <li><a href="#" class="socicon-facebook"></a></li>
-            <li><a href="#" class="socicon-twitter"></a></li>
-            <li><a href="#" class="socicon-instagram"></a></li>
-            <li><a href="#" class="socicon-youtube"></a></li>
+            <li><a href="#" class="socicon-facebook fa fa-facebook"></a></li>
+            <li><a href="#" class="socicon-twitter fa fa-twitter"></a></li>
+            <li><a href="#" class="socicon-instagram fa fa-instagram"></a></li>
+            <li><a href="#" class="socicon-youtube fa fa-youtube"></a></li>
           </ul>
         </div>
       </footer>
