--- a/event1.html
+++ b/event1.html
@@ -24,7 +24,7 @@
       <header class="ms-header">
         <nav class="ms-nav">
           <div class="ms-logo">
-            <a href="index.html" data-type="page-transition">
+            <a href="home1.html" data-type="page-transition">
               <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
               <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
@@ -39,46 +39,46 @@
             <ul class="ms-navbar">
               <!-- Nav Link -->
               <li class="nav-item">
-                <a href="index.html" data-type="page-transition">
-                  <span class="ms-btn">home</span>
-                  <span class="nav-item__label">Back to home page</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="albums.html" data-type="page-transition">
-                  <span class="ms-btn">albums</span>
-                  <span class="nav-item__label">View all our works</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="gallery.html" data-type="page-transition">
-                  <span class="ms-btn">gallery</span>
-                  <span class="nav-item__label">Interactively disintermediate</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="blog.html" data-type="page-transition">
-                  <span class="ms-btn">blog</span>
-                  <span class="nav-item__label">Discover fascinating stories</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="about.html" data-type="page-transition">
-                  <span class="ms-btn">about</span>
-                  <span class="nav-item__label">Learn more about the author</span>
-                </a>
-              </li>
-              <!-- Nav Link -->
-              <li class="nav-item">
-                <a href="contact.html" data-type="page-transition">
-                  <span class="ms-btn">contact</span>
-                  <span class="nav-item__label">Get in touch and find us</span>
-                </a>
-              </li>
+                  <a href="home1.html" data-type="page-transition">
+                    <span class="ms-btn">home</span>
+                    <span class="nav-item__label">Back to home page</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="albums.html" data-type="page-transition">
+                    <span class="ms-btn">gallery</span>
+                    <span class="nav-item__label">View all our works</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="gallery.html" data-type="page-transition">
+                    <span class="ms-btn">team</span>
+                    <span class="nav-item__label">Our team</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="blog.html" data-type="page-transition">
+                    <span class="ms-btn">events</span>
+                    <span class="nav-item__label">Discover fascinating events</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="about.html" data-type="page-transition">
+                    <span class="ms-btn">about</span>
+                    <span class="nav-item__label">Learn more about the society</span>
+                  </a>
+                </li>
+                <!-- Nav Link -->
+                <li class="nav-item">
+                  <a href="contact.html" data-type="page-transition">
+                    <span class="ms-btn">contact</span>
+                    <span class="nav-item__label">Get in touch and find us</span>
+                  </a>
+                </li>
             </ul>
           </div>
         </nav>
