--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="demo4"> . . . . . . . . . . . . . . . . . . . . . . .</div>
         </a>
     </div>
-    <script src="CircleType/dist/circletype.min.js"></script>
+    <script src="circle/dist/circletype.min.js"></script>
 
     <script src="app.js"></script>
     
