--- a/gallery.html
+++ b/gallery.html
@@ -17,21 +17,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <div class="ms-main-container">
+    <div class="ms-main-container albumback">
       <!-- Preloader -->
       <div class="ms-preloader"></div>
       <!-- Header -->
-      <header class="ms-header">
+      <header class="ms-header albumback1">
         <nav class="ms-nav">
           <div class="ms-logo">
             <a href="home1.html" data-type="page-transition">
-              <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
+              <div class="logo-dark current"><img src="nwhite.svg" alt="logo image"></div>
               <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
           </div>
+          <div class="gallery">OUR TEAM</div> 
           <button class="hamburger" type="button" data-toggle="navigation">
           <span class="hamburger-box">
-            <span class="hamburger-label">menu</span>
+            <span class="hamburger-label"></span>
             <span class="hamburger-inner"></span>
           </span>
           </button>
@@ -86,12 +87,12 @@
       <!-- Container -->
       <main class="ms-container">
         <!-- Page Title -->
-        <div class="ms-section__block">
+        <!-- <div class="ms-section__block">
           <div class="ms-page-title">
-            <h2 class="page-header">With Charleen</h2>
+            <h2 class="page-header">OUR TEAM</h2>
             <p class="page-desc">Conveniently fashion global intellectual capital whereas front-end strategic theme areas.</p>
           </div>
-        </div>
+        </div> -->
         <!-- Page Content -->
         <!-- <div class="ms-section__block">
           <div id="gallery">
@@ -134,15 +135,15 @@
         <div class="cordi">
           
           <div class="cordi-card">
-            <img src="assets/images/profiles/parth.jpeg" alt="parth" width="200px" height="350px">
+            <img src="assets/images/profiles/parth.jpeg" alt="parth" width="150px" height="300px">
             <div class="name-card">PARTH</div>
           </div>
           <div class="cordi-card">
-            <img src="assets/images/profiles/kunal.jpeg" alt="kunal" width="200px" height="350px">
+            <img src="assets/images/profiles/kunal.jpeg" alt="kunal" width="150px" height="300px">
             <div class="name-card">KUNAL KUMAR</div>
           </div>
           <div class="cordi-card">
-              <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
+              <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="150px" height="300px">
               <div class="name-card">VISHWA JEET</div>
           </div>
         </div>
@@ -151,64 +152,82 @@
           
           <div class="memb-1">  
             <div class="memb-card">
-                <img src="assets/images/profiles/divyanshi.jpeg" alt="divyanshi" width="200px" height="350px">
-                <div class="name-card1">DIVYANSHI</div>
+                <img src="assets/images/profiles/keshab.jpeg" alt="divyanshi" width="150px" height="300px">
+                <div class="name-card1">Keshab Agrawal</div>
             </div>
             <div class="memb-card">
-                <img src="assets/images/profiles/tarun.jpeg" alt="tarun" width="200px" height="350px">
-                <div class="name-card1">TARUN RAJ</div>
+                <img src="assets/images/profiles/sunidhi.jpeg" alt="tarun" width="150px" height="300px">
+                <div class="name-card1">Sunidhi Kashyap</div>
             </div>
             <div class="memb-card">
-                <img src="assets/images/profiles/husan.jpeg" alt="husan" width="200px" height="350px">
-                <div class="name-card1">HUSANDEEP</div>
+                <img src="assets/images/profiles/udeept.jpeg" alt="husan" width="150px" height="300px">
+                <div class="name-card1">Uddept Shandilya</div>
             </div>
-            <div class="memb-card">
-                <img src="assets/images/profiles/nehal.jpeg" alt="nehal" width="200px" height="350px">
-                <div class="name-card1">NEHAL</div>
-            </div>
+            <!-- <div class="memb-card">
+                <img src="assets/images/profiles/pranal.jpeg" alt="nehal" width="150px" height="300px">
+                <div class="name-card1">Pranal Maheshwari</div>
+            </div> -->
           </div>
 
           <div class="memb-2">  
             <div class="memb-card">
-                <img src="assets/images/profiles/jaya.jpeg" alt="jaya" width="200px" height="350px">
-                <div class="name-card1">JAYA MEENA</div>
+                <img src="assets/images/profiles/jaya.jpeg" alt="jaya" width="150px" height="300px">
+                <div class="name-card1">Jaya Meena</div>
             </div>
             <div class="memb-card">
-                <img src="assets/images/profiles/sunidhi.jpeg" alt="sunidhi" width="200px" height="350px">
-                <div class="name-card1">SUNIDHI KASHYAP</div>
+                <img src="assets/images/profiles/aman.jpeg" alt="sunidhi" width="150px" height="300px">
+                <div class="name-card1">Amandeep Singh</div>
             </div>
             <div class="memb-card">
-                <img src="assets/images/profiles/aastha.jpeg" alt="aastha" width="200px" height="350px">
-                <div class="name-card1">AASTHA</div>
+                <img src="assets/images/profiles/aastha.jpeg" alt="aastha" width="150px" height="300px">
+                <div class="name-card1">Aastha Kasera</div>
             </div>
-            <div class="memb-card">
-                <img src="assets/images/profiles/roshni.jpeg" alt="roshni" width="200px" height="350px">
+            <!-- <div class="memb-card">
+                <img src="assets/images/profiles/roshni.jpeg" alt="roshni" width="150px" height="300px">
                 <div class="name-card1">ROSHNI PRAJAPATI</div>
-            </div>
+            </div> -->
           </div>
           <div class="memb-3">  
               <div class="memb-card">
-                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
-                  <div class="name-card1">VISHWA JEET</div>
+                  <img src="assets/images/profiles/pranal.jpeg" alt="vishwajeet" width="150px" height="300px">
+                  <div class="name-card1">Pranal Maheshwari</div>
               </div>
               <div class="memb-card">
-                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
-                  <div class="name-card1">VISHWA JEET</div>
+                  <img src="assets/images/profiles/tarun.jpeg" alt="vishwajeet" width="150px" height="300px">
+                  <div class="name-card1">Tarun Raj</div>
               </div>
               <div class="memb-card">
-                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
+                  <img src="assets/images/profiles/husan.jpeg" alt="vishwajeet" width="150px" height="300px">
+                  <div class="name-card1">Husandeep Singh</div>
+              </div>
+              <!-- <div class="memb-card">
+                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="150px" height="300px">
                   <div class="name-card1">VISHWA JEET</div>
+              </div> -->
+            </div>
+            <div class="memb-4">  
+              <div class="memb-card">
+                  <img src="assets/images/profiles/roshni.jpeg" alt="vishwajeet" width="150px" height="300px">
+                  <div class="name-card1">Roshini Prajapati</div>
               </div>
               <div class="memb-card">
-                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="200px" height="350px">
-                  <div class="name-card1">VISHWA JEET</div>
+                  <img src="assets/images/profiles/achint.jpeg" alt="vishwajeet" width="150px" height="300px">
+                  <div class="name-card1">Achint Agrawal</div>
               </div>
+              <div class="memb-card">
+                  <img src="assets/images/profiles/divyanshi.jpeg" alt="vishwajeet" width="150px" height="300px">
+                  <div class="name-card1">Divyanshi</div>
+              </div>
+              <!-- <div class="memb-card">
+                  <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="150px" height="300px">
+                  <div class="name-card1">VISHWA JEET</div>
+              </div> -->
             </div>
         </div>
       </div>
 
       <!-- Footer -->
-      <footer>
+      <footer class=" footer-album">
         <div class="ms-footer">
           <div class="copyright">Copyright © 2017. Design by MadSparrow</div>
           <ul class="socials">
