--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1101.88 323.1">
                     <clipPath id="clip-00" clipPathUnits="objectBoundingBox" transform="scale(0.0005208333333333333, 0.000925925925925926)">
                     <defs>
-                        <style>.cls-1{font-size:10000%;font-family:here2;}</style>
+                        <style>.cls-1{font-size:10000%;font-family:here1;}</style>
                     </defs>
                     <title>NIR1</title>
-                    <text class="cls-1" id="yobitch" >NIRMITI</text>
+                    <text class="cls-1" id="yobitch" >FAS</text>
                 </clipPath>
                 </svg>
             
