--- a/albums.html
+++ b/albums.html
@@ -33,7 +33,7 @@
       <header class="ms-header albumback1">
         <nav class="ms-nav">
           <div class="ms-logo">
-            <a href="home1.html" data-type="page-transition">
+            <a href="index.html" data-type="page-transition">
               <div class="logo-dark"><img src="nblack.svg" alt="logo image"></div>
               <div class="logo-light current"><img src="nwhite.svg" alt="logo image"></div>
             </a>
