--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       <header class="ms-header">
         <nav class="ms-nav">
           <div class="ms-logo">
-            <a href="home1.html" data-type="page-transition">
+            <a href="index.html" data-type="page-transition">
               <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
               <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
