--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
       <header class="ms-header albumback1">
         <nav class="ms-nav">
           <div class="ms-logo">
-            <a href="home1.html" data-type="page-transition">
+            <a href="index.html" data-type="page-transition">
               <div class="logo-dark current"><img src="nwhite.svg" alt="logo image"></div>
               <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
@@ -132,22 +132,22 @@
       </main>
       <div class="team-container">
         <div class="head">COORDINATORS</div>
-        <div class="cordi">
+        <div class="memb-1">
           
-          <div class="cordi-card">
+          <div class="memb-card">
             <img src="assets/images/profiles/parth.jpeg" alt="parth" width="150px" height="300px">
-            <div class="name-card">PARTH</div>
+            <div class="name-card1">PARTH</div>
           </div>
-          <div class="cordi-card">
+          <div class="memb-card">
             <img src="assets/images/profiles/kunal.jpeg" alt="kunal" width="150px" height="300px">
-            <div class="name-card">KUNAL KUMAR</div>
+            <div class="name-card1">KUNAL KUMAR</div>
           </div>
-          <div class="cordi-card">
+          <div class="memb-card">
               <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="150px" height="300px">
-              <div class="name-card">VISHWA JEET</div>
+              <div class="name-card1">VISHWA JEET</div>
           </div>
         </div>
-        <div class="head">MEMBERS</div>
+        <div class="head head-memb">MEMBERS</div>
         <div class="member">
           
           <div class="memb-1">  
@@ -176,7 +176,7 @@
             </div>
             <div class="memb-card">
                 <img src="assets/images/profiles/aman.jpeg" alt="sunidhi" width="150px" height="300px">
-                <div class="name-card1">Amandeep Singh</div>
+                <div class="name-card1">Amandeep Sokhal</div>
             </div>
             <div class="memb-card">
                 <img src="assets/images/profiles/aastha.jpeg" alt="aastha" width="150px" height="300px">
@@ -216,7 +216,7 @@
               </div>
               <div class="memb-card">
                   <img src="assets/images/profiles/divyanshi.jpeg" alt="vishwajeet" width="150px" height="300px">
-                  <div class="name-card1">Divyanshi</div>
+                  <div class="name-card1">Divyanshi Raisinghani</div>
               </div>
               <!-- <div class="memb-card">
                   <img src="assets/images/profiles/vishwajeet.jpeg" alt="vishwajeet" width="150px" height="300px">
