--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     
 </head>
 <body>
+    <header class="header">
+        <div>Nirmiti</div>
+    </header>
         <!-- 0.0005208333333333333 <clipPath id="clip-00" clipPathUnits="objectBoundingBox" transform="scale(0.0005208333333333333, 0.000925925925925926)">-->
                 <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1101.88 323.1">
                     <clipPath id="clip-00" clipPathUnits="objectBoundingBox" transform="scale(0.0005208333333333333, 0.000925925925925926)">
                     <defs>
-                        <style>.cls-1{font-size:10000%;font-family:here1;}</style>
+                        <style>.cls-1{font-size:8500%;font-family:here1;}</style>
                     </defs>
                     <title>NIR1</title>
                     <text class="cls-1" id="yobitch" >FAS</text>
@@ -29,15 +32,16 @@
         </video>
     </div>
 
-    <div class="circular">
-        <a href="home1.html">
+    <a class="me" href="home1.html">
+        <div class="circular">
+            <div class="circle1" id="lol"><span>START</span></div>
             <div id="svgdiv">
                 <img src="nirmiti.svg" alt="" class="svg" width="63%" height="63%">
             </div>
             <div id="demo3">IIITA &nbsp; &nbsp; FINE ARTS SOCIETY, NIRMITI, </div>
             <div id="demo4"> . . . . . . . . . . . . . . . . . . . . . . .</div>
-        </a>
-    </div>
+        </div>
+    </a>
     <script src="circle/dist/circletype.min.js"></script>
 
     <script src="app.js"></script>
